[package]
name = "epitech-ics"
version = "0.1.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.1"
actix-rt = "1.1.1"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["v4"] }
serde_json = "1.0.60"
env_logger = "0.8.2"
log = "0.4.11"
regex = "1.4.2"
epitok = "0.2.0"
ics = "0.5.5"